# facerecognition

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
cmake/: FaceRecognitionConfig.cmake.in
examples/: build_and_run_example.sh  facerecognition_cli.cpp  install_opencv.sh
include/: facerecognition.hpp  helper.hpp
src/: facerecognition.cpp
